--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,18 +1,17 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %}
 
-<h2>Find a Recipe</h2>
+<h1>Find a Recipe</h1>
 
-{% block content %}
-	{% for recipe in recipes %}
-        {{ recipe.category }}<br>
-        {{ recipe.recipe_name }}<br>
-        {{ recipe.recipe_ingredients }}<br>
-        {{ recipe.recipe_method }}<br>
-        {{ recipe.image_url }}<br>
-        {{ recipe.date_time }}<br>
-        {{ recipe.created_at }}<br>
-        {{ recipe.updated_at }}<br>
-        {{ recipe.deleted_at }}<br>
-    {% endfor %}
+    {% for recipe in recipes %} {{ recipe.category }}<br />
+        {{ recipe.recipe_name }}<br />
+        {{ recipe.recipe_ingredients }}<br />
+        {{ recipe.recipe_method }}<br />
+        {{ recipe.image_url }}<br />
+        {{ recipe.date_time }}<br />
+        {{ recipe.created_at }}<br />
+        {{ recipe.updated_at }}<br />
+        {{ recipe.deleted_at }}<br />
+
+    {% endfor %} 
 
 {% endblock %}
