--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
-<h1>HOMEPAGE</h1>
+
 
 {% endblock %}
