Fixing auto container margins and paddings. More work to do.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} {% block content %}
 
-
+<div class="row">
+  <div class="col s12">
+    <img class="responsive-img" src="static/css/images/homepage_image.jpg" alt="" />
+  </div>
+</div>
 
 {% endblock %}
