--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,14 @@
               <li><a href="#">Manage Recipes</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Order Meat</a></li>
+              <li>
+                <a
+                  href="{{ url_for('sign_up') }}"
+                  class="waves-effect waves-light btn"
+                  >Sign Up</a
+                >
+              </li>
+              <li><a class="waves-effect waves-light btn">Sign In</a></li>
             </ul>
           </div>
         </nav>
@@ -54,6 +62,12 @@
       <li><a href="#">Manage Recipes</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Order Fresh Meat</a></li>
+      <li>
+        <a href="{{ url_for('sign_up') }}" class="waves-effect waves-light btn"
+          >Sign Up</a
+        >
+      </li>
+      <li><a class="waves-effect waves-light btn">Sign In</a></li>
     </ul>
   </header>
 
