Sign up form styled ready for building post method functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,11 @@
               <li>
                 <a
                   href="{{ url_for('sign_up') }}"
-                  class="waves-effect waves-light btn"
+                  class="waves-effect waves-light btn red lighten-2"
                   >Sign Up</a
                 >
               </li>
-              <li><a class="waves-effect waves-light btn">Sign In</a></li>
+              <li><a class="waves-effect waves-light btn red lighten-2">Sign In</a></li>
             </ul>
           </div>
         </nav>
@@ -72,6 +72,7 @@
   </header>
 
   <body>
+
     <main class="container">
       {% block content %} {% endblock %}
     </main>
