--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,28 +1,34 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-  <form class="col s12">
+<div class="col">
+<h2>Sign up</h2>
+<p>Share your recipes with the community! Sign up below and start posting. It's that simple.</p>
+</div>
+</div>
+<div class="row">
+  <form class="col s12" method="POST" action="{{ url_for('sign_up') }}">
     <div class="card-panel">
       <!-- Username -->
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">account_circle</i>
-          <input id="icon_prefix" type="text" class="validate" />
-          <label for="icon_prefix">First Name</label>
+          <i class="far fa-user-circle prefix"></i></i>
+          <input id="username" name="username" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9{5, 15}$" class="validate" required/>
+          <label for="icon_prefix">Username</label>
         </div>
       </div>
       <!-- Password -->
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">phone</i>
-          <input id="icon_telephone" type="tel" class="validate" />
-          <label for="icon_telephone">Telephone</label>
+          <i class="fas fa-unlock prefix"></i>
+          <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9{5, 15}$" class="validate" required/>
+          <label for="password">Password</label>
         </div>
       </div>
 
       <!-- Register -->
       <div class="row">
-        <button type="submit" class="col s12 btn-large">Sign Up</button>
+        <button type="submit" class="col s12 btn-large red lighten-2">Sign Up</button>
       </div>
     </div>
   </form>
