--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,11 @@
                   >Sign Up</a
                 >
               </li>
-              <li><a class="waves-effect waves-light btn red lighten-2">Sign In</a></li>
+              <li>
+                <a class="waves-effect waves-light btn red lighten-2"
+                  >Sign In</a
+                >
+              </li>
             </ul>
           </div>
         </nav>
@@ -72,6 +76,15 @@
   </header>
 
   <body>
+    <section>
+      <!-- flash messages -->
+      {% with messages = get_flashed_messages() %} {% if messages %} {% for
+      message in messages %}
+      <div class="row flashes">
+        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+      </div>
+      {% endfor %} {% endif %} {% endwith %}
+    </section>
 
     <main class="container">
       {% block content %} {% endblock %}
