--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="row">
-  <form class="col s12" method="POST" action="{{ url_for('sign_up') }}">
+  <form class="col s12" method="POST" action="{{ url_for('sign_in') }}">
     <div class="card-panel">
       <!-- Username -->
       <div class="row">
@@ -48,7 +48,7 @@
       <!-- Register -->
       <div class="row">
         <button type="submit" class="col s12 btn-large red lighten-2">
-          Sign Up
+          Sign In
         </button>
       </div>
     </div>
@@ -58,8 +58,8 @@
 <!-- New here? Sign up -->
 <div class="row">
   <div class="col s12">
-    <p class="center-align">New here?<a href="{{ url_for('sign_up') }}" class="red lighten-2"
-        >Sign up here</a></p>
+    <p class="center-align">New here?<a href="{{ url_for('sign_up') }}"
+        > Sign up here</a></p>
   </div>
 </div>
 
