--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col">
-    <h2>Sign up</h2>
+    <h2>Sign Up</h2>
     <p>
       Share your recipes with the community! Sign up below and start posting.
       It's that simple.
@@ -60,7 +60,8 @@
 <!-- Already Registered? -->
 <div class="row">
   <div class="col s12">
-    <p class="center-align">Already registered? Sign in here ##</p>
+    <p class="center-align">Already registered?<a href="{{ url_for('sign_in') }}"
+        > Sign in here</a></p>
   </div>
 </div>
 
