--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,16 +2,19 @@
 
 <h1>Find a Recipe</h1>
 
-    {% for recipe in recipes %} {{ recipe.category }}<br />
-        {{ recipe.recipe_name }}<br />
-        {{ recipe.recipe_ingredients }}<br />
-        {{ recipe.recipe_method }}<br />
-        {{ recipe.image_url }}<br />
-        {{ recipe.date_time }}<br />
-        {{ recipe.created_at }}<br />
-        {{ recipe.updated_at }}<br />
-        {{ recipe.deleted_at }}<br />
-
-    {% endfor %} 
+<ul class="collapsible">
+  {% for recipe in recipes %}
+  <li>
+    <div class="collapsible-header white-text red lighten-3">
+      <div class="col s3">
+        <i class="fas fa-utensils"></i>{{ recipe.recipe_name }} : {{
+        recipe.category }}
+      </div>
+    </div>
+    <div class="col s9"></div>
+    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+  </li>
+  {% endfor %}
+</ul>
 
 {% endblock %}
