--- a/templates/base.html
+++ b/templates/base.html
@@ -43,11 +43,12 @@
               <li><a href="#">Manage Recipes</a></li>
               {% else %}
               <li><a href="#">About</a></li>
-              {% endif %}
-              {% if session.user %}
+              {% endif %} {% if session.user %}
               <li><a href="#">Order Meat</a></li>
               <li>
-                <a href="{{ url_for('sign_out') }}" class="waves-effect waves-light btn red lighten-2"
+                <a
+                  href="{{ url_for('sign_out') }}"
+                  class="waves-effect waves-light btn red lighten-2"
                   >Sign Out</a
                 >
               </li>
@@ -75,15 +76,21 @@
     <!-- Mobile Nav Bar -->
     <ul class="sidenav" id="mobile-demo">
       <li><a href="{{ url_for('find_recipe') }}">Find a Recipe</a></li>
+      {% if session.user %}
       <li><a href="{{ url_for('add_recipe') }}">Add a Recipe</a></li>
       <li><a href="#">Manage Recipes</a></li>
+      {% else %}
       <li><a href="#">About</a></li>
       <li><a href="#">Order Fresh Meat</a></li>
+      {% endif %} {% if session.user %}
       <li>
-                <a href="{{ url_for('sign_out') }}" class="waves-effect waves-light btn red lighten-2"
-                  >Sign Out</a
-                >
-              </li>
+        <a
+          href="{{ url_for('sign_out') }}"
+          class="waves-effect waves-light btn red lighten-2"
+          >Sign Out</a
+        >
+      </li>
+      {% else %}
       <li>
         <a href="{{ url_for('sign_up') }}" class="waves-effect waves-light btn"
           >Sign Up</a
@@ -96,6 +103,7 @@
           >Sign In</a
         >
       </li>
+      {% endif %}
     </ul>
   </header>
 
