Category drop down initialized. To fix: categories not displaying

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -8,6 +8,20 @@
 
 <div class="row card-panel">
   <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+    <!-- Category Selector -->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="fas fa-chevron-down prefix"></i>
+        <select id="category" name="category" class="validate" required>
+          <option value="" disabled selected>Select Meal Category</option>
+          {% for category in categories %}
+          <option value="{{ category.category }}"
+            >{{ category.categoory }}</option
+          >
+          {% endfor %}
+        </select>
+      </div>
+    </div>
     <!-- Recipe Name -->
     <div class="row">
       <div class="input-field col s12">
@@ -38,13 +52,13 @@
           required
         />
         <label for="icon_prefix">Recipe Ingredients</label>
-        </div>
+      </div>
     </div>
-        <!-- Recipe Method -->
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="fas fa-book-open prefix"></i>
-            <textarea
+    <!-- Recipe Method -->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="fas fa-book-open prefix"></i>
+        <textarea
           id="recipe_method"
           name="recipe_method"
           minlength="150"
@@ -52,11 +66,11 @@
           class="materialize-textarea validate"
           required
         ></textarea>
-            <label for="icon_prefix">Recipe Method</label>
-          </div>
-        </div>
+        <label for="icon_prefix">Recipe Method</label>
+      </div>
+    </div>
 
-        <!-- Image URL 
+    <!-- Image URL 
         <div class="row">
           <div class="input-field col s12">
             <i class="fas fa-egg prefix"></i>
@@ -74,8 +88,8 @@
           </div>
         </div>-->
 
-      <!-- Submit Recipe Button -->
-      <div class="row">
+    <!-- Submit Recipe Button -->
+    <div class="row">
       <div class="col s12 center-align">
         <button type="submit" class="col s12 btn-large red lighten-2">
           Submit Recipe
