--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -13,6 +13,7 @@
       <div class="col s9">
         <i class="fas fa-utensils"></i>{{ recipe.recipe_name }} : {{
         recipe.category }}
+        <p><em>by: {{ recipe.created_by }}</em></p>
       </div>
       <div class="col s3">
         <a href="#" class="waves-effect waves-light btn red lighten-2"
