Fixed category drop down. Now all working well

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -16,7 +16,7 @@
           <option value="" disabled selected>Select Meal Category</option>
           {% for category in categories %}
           <option value="{{ category.category }}"
-            >{{ category.categoory }}</option
+            >{{ category.category }}</option
           >
           {% endfor %}
         </select>
