--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -7,19 +7,27 @@
 </div>
 
 <div class="row card-panel">
-  <form class="col s12" method="POST" 
-  action="{{ url_for('add_recipe', recipe_id=recipe._id) }}">
+  <form
+    class="col s12"
+    method="POST"
+    action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
+  >
     <!-- Category Selector -->
     <div class="row">
       <div class="input-field col s12">
         <i class="fas fa-chevron-down prefix"></i>
         <select id="category" name="category" class="validate" required>
           <option value="" disabled selected>Select Meal Category</option>
-          {% for category in categories %}
+          {% for category in categories %} {% if category.category ==
+          recipe.category %}
+          <option value="{{ category.category }}" selected
+            >{{ category.category }}</option
+          >
+          {% else %}
           <option value="{{ category.category }}"
             >{{ category.category }}</option
           >
-          {% endfor %}
+          {% endif %} {% endfor %}
         </select>
       </div>
     </div>
@@ -33,6 +41,7 @@
           type="text"
           minlength="5"
           maxlength="100"
+          value="{{ recipe.recipe_name }}"
           class="validate"
           required
         />
@@ -49,6 +58,7 @@
           type="text"
           minlength="5"
           maxlength="400"
+          value="{{ recipe.recipe_ingredients }}"
           class="validate"
           required
         />
@@ -66,7 +76,7 @@
           maxlength="800"
           class="materialize-textarea validate"
           required
-        ></textarea>
+        >{{- recipe.recipe_method -}}</textarea>
         <label for="icon_prefix">Recipe Method</label>
       </div>
     </div>
@@ -91,10 +101,12 @@
 
     <!-- Submit Recipe Button -->
     <div class="row">
-      <div class="col s12 center-align">
-        <button type="submit" class="col s12 btn-large red lighten-2">
+      <div class="col s12">
+        <button type="submit" class="col s5 btn-large red lighten-2">
           Edit Recipe
         </button>
+        <!-- Cancel Button -->
+        <a href="{{ url_for('find_recipe') }}" class="col s5 btn-large red lighten-2">Cancel</a>
       </div>
     </div>
   </form>
