--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ html, body {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    font-family: font-family; 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h1,
@@ -14,6 +14,8 @@ h6 {
     font-family: 'Playfair Display', serif;
     color: #383838;
 }
+
+
 /* 
 .container {
     margin-left: 3em;
@@ -34,4 +36,16 @@ h6 {
 
 .logo {
     height: 50px;
+}
+
+.view-btn {
+    color: 383838;
+}
+
+.collapsible-header .btn {
+    margin: 5px;
+}
+
+.recipes h5 {
+    color: white;
 }
