--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -102,11 +102,13 @@
     <!-- Submit Recipe Button -->
     <div class="row">
       <div class="col s12">
-        <button type="submit" class="col s5 btn-large red lighten-2">
+        <button type="submit" class="col s4 btn-large red lighten-2">
           Edit Recipe
         </button>
         <!-- Cancel Button -->
-        <a href="{{ url_for('find_recipe') }}" class="col s5 btn-large red lighten-2">Cancel</a>
+        <a href="{{ url_for('find_recipe') }}" class="col s4 btn-large red lighten-2">Cancel</a>
+        <!-- Delete Recipe Button -->
+        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="col s4 btn-large red lighten-1">Delete Recipe</a>
       </div>
     </div>
   </form>
