--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -22,7 +22,7 @@
         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-2"
           >Edit Recipe</a
         >
-        <a href="#" class="waves-effect waves-light btn red lighten-1"
+        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-1"
           >Delete Recipe</a
         >
       </div>
