--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,16 +15,18 @@
         recipe.category }}
         <p><em>by: {{ recipe.created_by }}</em></p>
       </div>
-      <div class="col s6 recipe-buttons right-align">
+      <div class="col s6 recipe-buttons left-align">
         <a href="#" class="waves-effect waves-light btn view-btn red lighten-5"
           >View Recipe</a
         >
+        {% if session.user|lower == recipe.created_by|lower %}
         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-2"
           >Edit Recipe</a
         >
         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-1"
           >Delete Recipe</a
         >
+        {% endif %}
       </div>
     </div>
 
