Layout of view_recipe page completed. Editing to Homepage started. Styling of Flashes updated

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="col">
-  <div class="row">
-    <h1>Add a Recipe</h1>
+<div class="container center-align">
+  <div class="col">
+    <div class="row">
+      <h1>Add a Recipe</h1>
+    </div>
   </div>
 </div>
 
