--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,17 +15,31 @@ h6 {
     color: #383838;
 }
 
+h2 {
+    font-size: 2.56rem;
+}
 
-/* 
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1.25rem;
+}
+
 .container {
-    margin-left: 3em;
-    margin-right: 3em;
-}*/
+    width: 95%;
+}
+
+/* Flashes */
+.flashes h3 {
+    line-height: 4;
+}
 
 /* Navigation Styling */
 .navigation-bar {
-    margin-left: 50px;
-    margin-right: 50px;
+    width: 90%;
+    margin: 0 auto;
     font-family: 'Open Sans';
 }
 
@@ -46,6 +60,10 @@ h6 {
     margin: 5px;
 }
 
+/* Recipe Page */
+
 .recipes h5 {
     color: white;
 }
+
+
