--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,25 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-  <div class="col s12">
-    <img class="responsive-img" src="static/css/images/homepage_image.jpg" alt="" />
+  
+  <div class="col m6 s12">
+    <div class="card-panel">
+      <img
+        class="responsive-img"
+        src="https://www.kitchensanctuary.com/wp-content/uploads/2016/06/Crispy-Chicken-Wings-with-Sticky-Asian-Glaze-tall-FS.webp"
+      />
+    </div>
   </div>
+
+  <div class="col m6 s12">
+    <div class="card-panel">
+      <img
+        class="responsive-img"
+        src="https://www.kitchensanctuary.com/wp-content/uploads/2016/06/Crispy-Chicken-Wings-with-Sticky-Asian-Glaze-tall-FS.webp"
+      />
+    </div>
+  </div>
+
 </div>
 
 {% endblock %}
