--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,35 +1,41 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="col">
-  <div class="row">
-    <h1>Find a Recipe</h1>
+<div class="container center-align">
+  <div class="col">
+    <div class="row">
+      <h1>Find a Recipe</h1>
+    </div>
   </div>
 </div>
-
 <ul class="collapsible">
   {% for recipe in recipes %}
   <li>
-  <div class="row recipes collapsible-header white-text red lighten-3">
+    <div class="row recipes collapsible-header white-text red lighten-3">
       <div class="col s7">
-        <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5> {{
-        recipe.category }}
+        <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
+        {{ recipe.category }}
         <p><em>by: {{ recipe.created_by }}</em></p>
       </div>
       <div class="col s6 recipe-buttons left-align">
-        <a href="#" class="waves-effect waves-light btn view-btn red lighten-5"
+        <a
+          href="{{ url_for('view_recipe') }}"
+          class="waves-effect waves-light btn view-btn red lighten-5"
           >View Recipe</a
         >
         {% if session.user|lower == recipe.created_by|lower %}
-        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-2"
+        <a
+          href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
+          class="waves-effect waves-light btn red lighten-2"
           >Edit Recipe</a
         >
-        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn red lighten-1"
+        <a
+          href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+          class="waves-effect waves-light btn red lighten-1"
           >Delete Recipe</a
         >
         {% endif %}
       </div>
     </div>
-
 
     <div class="col s9"></div>
     <div class="collapsible-body"><span>{{ recipe.recipe_method }}</span></div>
