update website logo link as per discussion with tutor

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col s6 recipe-buttons left-align">
         <a
-          href="{{ url_for('view_recipe') }}"
+          href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
           class="waves-effect waves-light btn view-btn red lighten-5"
           >View Recipe</a
         >
