--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <nav class="sidenav-trigger red lighten-3">
           <div class="nav-wrapper">
             <a href="{{ url_for('home') }}">
-              <img class="logo" src="static/css/images/logo.png" alt="Meatblog"
+              <img class="logo" src="{{ url_for('static', filename='css/images/logo.png') }}" alt="Meatblog"
             /></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"
               ><i class="fas fa-bars"></i
