--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,10 @@ h4 {
 /* Homepage */
 
 /* Main Image */
+
+.main-image-row {
+    margin-top: 50px;
+}
 .main-image {
   position: relative;
   text-align: center;
@@ -141,6 +145,10 @@ h4 {
 
 .recipe-of-month {
   margin-bottom: 70px;
+}
+
+.recipe-of-month-image {
+    max-height: 600px;
 }
 
 .submit-recipe-section {
