--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 
 <!-- Main Homepage Image -->
-<div class="row">
+<div class="row main-image-row">
   <div class="col m8 s12 main-image">
     <img
       class="responsive-img"
@@ -81,34 +81,56 @@
 
 <!-- Recipe of the Month -->
 
-<div class="row recipe-of-month">
-  <div class="col m8 s12 main-image">
+<div class="row recipe-of-month valign-wrapper">
+  <div class="col s12 m6 main-image">
     <img
-      class="responsive-img"
-      src="{{ url_for('static', filename='css/images/homepage_image.jpg') }}"
+      class="responsive-img recipe-of-month-image"
+      src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
     />
   </div>
 
-  <div class="col s12 m4">
-  <h2>Recipe of the Month</h2>
-<h3>Recipe name</h3>
-<h4>Ingredients</h4>
-<p></p>
-<h4>Method</h4>
-<p>Method info</p>
+  <div class="col s12 m6">
+    <h2>Recipe of the Month</h2>
+    <h3>Recipe name</h3>
+    <h4>Ingredients</h4>
+    <p>•140g self-raising flower<br>
+•	Shake of salt<br>
+•	2 tbsp caster sugar<br>
+•	125m milk<br>
+•	1 large egg<br>
+•	1 tbsp Olive oil<br>
+•	Maple Syrup<br>
+•	Bacon<br>
+</p>
+    <h4>Method</h4>
+    <p>First cook your crispy bacon…<br>
+1.	Lay bacon on a cold oven proof tray and put it in a cold oven<br>
+2.	Turn the oven on to 200’c and set the time for 20mins<br>
+3.	It may be done slightly before, when it is, remove the oven and put the bacon on some kitchen roll to soak up any liquid<br>
+4.	Whilst the bacon is cooking, mix together the flour, salt, sugar. If you can be bothered, sieve it, it will taste a bit better but not much<br>
+5.	Lightly beat the egg, add the milk and oil and mix<br>
+6.	Mix the two mixtures together. They should form a nice batter with a little beating and mixing. It will be quite a thick mixture<br>
+7.	When the Bacon is done, heat a frying pan to a medium heat<br>
+8.	Add some mixture, it will be thick, that’s fine<br>
+9.	Lay a piece of bacon on top<br>
+10.	When the batter starts to bubble, flip it over<br>
+11.	When both sides are browned lightly, its ready to eat!<br>
+</p>
   </div>
 </div>
 
 <!-- Submit Your Own Recipe -->
 <div class="col s12 center-align submit-recipe-section">
-<h1>Submit your own recipe</h1>
-<p>Do you have a tasty, meat based recipe you would like to share?<br>Create an account quickly and for free and post away!</p>
-<a
-      href="{{ url_for('sign_up') }}"
-      class="waves-effect waves-light btn red lighten-2 about-btn"
-      >Sign up</a
-    >
+  <h1>Submit your own recipe</h1>
+  <p>
+    Do you have a tasty, meat based recipe you would like to share?<br />Create
+    an account quickly and for free and post away!
+  </p>
+  <a
+    href="{{ url_for('sign_up') }}"
+    class="waves-effect waves-light btn red lighten-2 about-btn"
+    >Sign up</a
+  >
 </div>
-
 
 {% endblock %}
