--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       <h2>Cook, Submit, Share</h2>
       <a
         href="{{ url_for('find_recipe') }}"
-        class="waves-effect waves-light btn red lighten-2 about-btn"
+        class="waves-effect waves-light btn red lighten-2 header-btn"
         >Find a Recipe</a
       >
     </div>
